--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,18 @@
   "version": 2,
   "builds": [
     {
-      "src": "*.html",         // 构建所有 HTML 文件
+      "src": "*.html",        
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/",              // 根路径跳转到主页
+      "src": "/",              
       "dest": "/绩点计算器.html"
     },
     {
-      "src": "/(.*)",          // 匹配所有其他路径
-      "dest": "/\$1"            // 直接返回对应文件（如 /Power Distribution/index.html）
+      "src": "/(.*)",          
+      "dest": "/\$1"            
     }
   ]
 }
